--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -28,10 +28,11 @@ jobs:
         with:
           node-version: 20
       # - run: npm i
-      - run: git commit -m "testing"
+      - run: |
+          git config user.name "  ioBroker Bot"
+          git config user.email "<>"
+          git commit -m "testing"
+          git push -u origin HEAD
         env:
           IOBBOT_GITHUB_TOKEN: ${{ secrets.IOBBOT_GITHUB_TOKEN }}
       
-      - run: git push -u origin HEAD
-        env:
-          IOBBOT_GITHUB_TOKEN: ${{ secrets.IOBBOT_GITHUB_TOKEN }}
