--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -23,12 +23,14 @@ jobs:
       
     runs-on: ubuntu-latest
     steps:
+    
       - uses: actions/checkout@v4
       - uses: actions/setup-node@v4
         with:
           node-version: 20
       # - run: npm i
       - run: |
+          touch dummy.dummy
           git config user.name "  ioBroker Bot"
           git config user.email "<>"
           git commit -m "testing"
