--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -30,10 +30,9 @@ jobs:
           node-version: 20
       # - run: npm i
       - run: |
-          echo date > dummy.dummy
           git config user.name "  ioBroker Bot"
           git config user.email "<>"
-          git commit -m "testing"
+          git commit --allow-empty -m "testing"
           git push -u origin HEAD
         env:
           IOBBOT_GITHUB_TOKEN: ${{ secrets.IOBBOT_GITHUB_TOKEN }}
