--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -23,7 +23,7 @@ jobs:
       
     runs-on: ubuntu-latest
     permissions:
-      conetents: write
+      contents: write
       
     steps:
     
